# warden

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  core.conf.template
.git-history/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-history/logs/: HEAD
.git-history/logs/refs/remotes/origin/: HEAD  main
.git-history/objects/pack/: pack-776e4465bd14336daac883fb389d230a598a82ab.idx  pack-776e4465bd14336daac883fb389d230a598a82ab.pack  pack-776e4465bd14336daac883fb389d230a598a82ab.rev
.git-history/refs/original/refs/heads/: main
proto/: warden.proto
src/: allowlist.rs  api.rs  audit.rs  cloud.rs  discovery.rs  ffi.rs  fim.rs  heuristics.rs  lib.rs  main.rs  notifications.rs  quarantine.rs  scanner.rs  ssh_hardening.rs  ssh_monitor.rs  storage_discovery.rs  tls_buffer.rs  tty_logger.rs  types.rs  upload_scan.rs
warden-cli/: Cargo.toml
warden-cli/src/: main.rs
