[package]
name = "warden"
version = "0.1.0"
edition = "2021"

[lib]
name = "warden"
path = "src/lib.rs"

[[bin]]
name = "wardend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "process", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.27", features = ["user"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
dashmap = "5.5"
semver = "1.0"
uuid = { version = "1", features = ["v4"] }
kinnector-config = { path = "../kinnector-config" }
regex = "1.10"
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = { version = "0.10", features = ["tls-webpki-roots"] }
prost = "0.12"
futures-core = "0.3"
openssl = "0.10"

[build-dependencies]
tonic-build = "0.10"
